Fix Java 21 compatibility issues by replacing getFirst() with get(0)
Co-authored-by: tcheeric <6341500+tcheeric@users.noreply.github.com>